--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
             <version>11.12.0</version>
         </dependency>
 
+        <!--metadata reading from: https://github.com/drewnoakes/metadata-extractor -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.16.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.openjfx</groupId>
