Bound size of scroll ribbon and elements to a propoerty so app now scales better. A minimum size set for photoViewer

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,15 @@
     <version>1.0-SNAPSHOT</version>
     <name>MemView</name>
 
+    <distributionManagement>
+        <repository>
+            <id>internal</id>
+            <name>MemView</name>
+            <url>file:///home/hugh/Documents/Development/Java/target/output</url>
+            <layout>default</layout>
+        </repository>
+    </distributionManagement>
+
     <repositories>
         <repository>
             <releases>
