--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
     <artifactId>MemView</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>MemView</name>
+    <organization>
+        <name>Thane-Patrol</name>
+        <url>https://www.thanepatrol.com</url>
+    </organization>
+    <inceptionYear>2021</inceptionYear>
+
+    <licenses>
+        <license>
+            <name>GNU AFFERO GENERAL PUBLIC LICENSE version 3</name>
+            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
+        </license>
+    </licenses>
 
     <distributionManagement>
         <repository>
@@ -75,7 +87,7 @@
         <dependency>
             <groupId>com.drewnoakes</groupId>
             <artifactId>metadata-extractor</artifactId>
-            <version>2.16.0</version>
+            <version>2.17.0</version>
         </dependency>
 
         <!-- Creating thumbnails directly from bufferedImage - also to add watermarks -->
@@ -216,6 +228,11 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>1.14</version>
+            </plugin>
+            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
@@ -275,9 +292,9 @@
                             <mainClass>main.controllers.HelloApplication</mainClass>
                             <!-- optional -->
                             <!-- bundling JRE causes failures, needs investigation -->
-                            <bundleJre>false</bundleJre>
+                            <bundleJre>true</bundleJre>
                             <generateInstaller>true</generateInstaller>
-                            <administratorRequired>false</administratorRequired>
+                            <administratorRequired>true</administratorRequired>
                             <platform>auto</platform>
 
 
